added Interactive Mode for user interface

--- a/PunchIt/PunchItClient/PunchItClient.csproj
+++ b/PunchIt/PunchItClient/PunchItClient.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataWritePermission.cs" />
+    <Compile Include="FrameSegment.cs" />
+    <Compile Include="InteractiveModeViewAdapter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInterface.cs" />
