added action to edit record entires

--- a/PunchIt/PunchItClient/PunchItClient.csproj
+++ b/PunchIt/PunchItClient/PunchItClient.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataWritePermission.cs" />
+    <Compile Include="EditRecordsInteractiveMode.cs" />
     <Compile Include="FrameSegment.cs" />
     <Compile Include="InteractiveModeViewAdapter.cs" />
     <Compile Include="Program.cs" />
